try to add delete blog
